Spacing error fixed on blog

--- a/application/destigo-app/client/src/components/categories/categories.module.css
+++ b/application/destigo-app/client/src/components/categories/categories.module.css
@@ -281,3 +281,8 @@ font-weight: 400;
     background-color: #ffc198;
   }
   
+
+  .Spacer{
+    padding-bottom: 10rem;
+
+  }
